// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render SectionBackground with dark background 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 4.0rem;
  width: 100%;
}

<div
  class="c0"
  id="id-1995-0843329079482"
>
  <div
    class="c1"
  >
    <h1>
      Teste
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render SectionBackground with light background 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 4.0rem;
  width: 100%;
}

<div
  class="c0"
  id="id-9245-602476291017"
>
  <div
    class="c1"
  >
    <h1>
      Teste
    </h1>
  </div>
</div>
`;
